<resources>
    <string name="app_name">SmartHome</string>
    <string name="app_title">Smart Home</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="not_info">Not info yet</string>

    <string-array name="device_type_array">
        <item>DHT Sensor Device</item>
        <item>Custom Sensors Device</item>
        <item>Relay Device</item>
    </string-array>


    <string name="string_about_activity">About</string>
    <string name="string_about_title">By Ivan Kolev</string>
    <string name="string_about_content">This app is part of my portfolio. \n Contact me if you are interested in my work.</string>
    <string name="string_about_contacts">Contacts:</string>
    <string name="string_about_linkedin">https://www.linkedin.com/in/ivan-kolev-a669a626</string>
    <string name="string_about_email">ivan.pl.kolev@gmail.com</string>
    <string name="string_about_bottom_logo">Copyright \u00A9 2017 SmartHome</string>
    <string name="add_relay_dialog_name">Name</string>
    <string name="add_relay_dialog_desc">Description</string>
    <string name="add_relay_dialog_key">Key</string>
    <string name="add_relay_dialog_description">Description</string>
    <string name="add_sensor_dialog_key">Key</string>
    <string name="add_sensor_dialog_units">Units</string>
    <string name="add_sensor_dialog_name">Name</string>
    <string name="device_general_layout_url_adress">URL Adress</string>
    <string name="device_general_layout_port_number">Port number</string>
    <string name="device_general_layout_port_default">80</string>
    <string name="device_general_layout_description">Description</string>
    <string name="device_general_layout_name">Name</string>
    <string name="menu_add_new_device">Add new Device</string>
    <string name="menu_other">Other</string>
    <string name="menu_new_title_3">About</string>
    <string name="relay_row_key">Key:</string>
    <string name="relay_row_description">Description:</string>
    <string name="relay_row_name">Name:</string>
    <string name="sensor_display_name">Name:</string>
    <string name="sensor_display_value">Value:</string>
    <string name="sensor_display_units">Units:</string>
    <string name="sensor_row_description">Description:</string>
    <string name="sensor_row_key">Key:</string>
    <string name="sensor_row_units">Units:</string>
    <string name="sensor_row_name">Name:</string>
    <string name="Add_edit_device">Add edit device</string>
    <string name="device">Device</string>
    <string name="sensors">Sensors</string>
    <string name="relays">Relays</string>
    <string name="about">About</string>
    <string name="details">Details</string>

</resources>
