<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_margin="10sp"--><!--style="@style/settings_list">-->


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    card_view:cardBackgroundColor="#FF9800"
    card_view:cardCornerRadius="7sp"
    card_view:cardElevation="7sp"
    card_view:contentPadding="7sp"

    >

    <kolevmobile.com.smarthome.custom_components.ExpandableLayout
        android:id="@+id/expandable_layout"
        style="@style/expandableLayout"
        app:expDuration="500"
        app:expWithParentScroll="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/settings_list">

            <LinearLayout style="@style/textRow">

                <TextView
                    style="@style/textTitle"
                    android:text="@string/sensor_row_name" />

                <TextView
                    android:id="@+id/sensor_name_text_view"
                    style="@style/textContent" />
            </LinearLayout>

            <LinearLayout style="@style/textRow">

                <TextView
                    style="@style/textTitle"
                    android:text="@string/sensor_row_description" />

                <TextView
                    android:id="@+id/sensor_description_text_view"
                    style="@style/textContent" />
            </LinearLayout>

            <LinearLayout style="@style/textRow">

                <TextView
                    style="@style/textTitle"
                    android:text="@string/sensor_row_key" />

                <TextView
                    android:id="@+id/sensor_key_text_view"
                    style="@style/textContent" />
            </LinearLayout>

            <LinearLayout style="@style/textRow">

                <TextView
                    style="@style/textTitle"
                    android:text="@string/sensor_row_units" />

                <TextView
                    android:id="@+id/sensor_units_text_view"
                    style="@style/textContent" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/subdevice_options" />

    </kolevmobile.com.smarthome.custom_components.ExpandableLayout>

    <!--</LinearLayout>-->

</android.support.v7.widget.CardView>