<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wholeWidgetLayoutsensor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/initSensorWidget"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:src="@drawable/ic_add_black_24dp" />


    <LinearLayout
        android:id="@+id/sensorWidgetCardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7sp"
        android:background="#FF9800"
        android:orientation="vertical"
        android:padding="7sp">

        <TextView
            android:id="@+id/sensor_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/sensor_display_name"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/sensor_display_name"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/sensor_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sensor_display_value"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/sensor_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sensor_display_units"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>